<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.vase4kin.teamcityapp.runbuild.view.RunBuildActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_queue_build"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="@dimen/dp_40"
        android:text="@string/title_run_build"
        app:icon="@drawable/ic_directions_run_white_24px" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <FrameLayout
            style="@style/SurfaceView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:animateLayoutChanges="true"
                android:orientation="vertical">

                <include layout="@layout/layout_branch_filter" />

                <include layout="@layout/layout_divider" />

                <LinearLayout
                    android:id="@+id/chooser_agent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_agents"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/selected_agent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/hint_default_filter_agent"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/material_on_background_emphasis_medium"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/text_no_agents_available"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_no_agents_available"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/material_on_background_emphasis_medium"
                        android:visibility="gone"
                        tools:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/progress_agents_loading"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal"
                        android:visibility="visible"
                        tools:visibility="visible">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/dp_16"
                            android:text="@string/text_loading_agents"
                            android:textAppearance="?attr/textAppearanceBody2"
                            android:textColor="@color/material_on_background_emphasis_medium" />

                        <ProgressBar
                            android:id="@+id/progress_wheel"
                            style="?android:attr/progressBarStyleSmall"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:indeterminate="true"
                            android:indeterminateTint="?attr/colorOnBackground" />

                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_is_personal"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_run_as_personal" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_queueAtTop"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_switcher_run_as_queue_at_the_top" />

                <include layout="@layout/layout_divider" />

                <Switch
                    android:id="@+id/switcher_clean_all_files"
                    style="@style/Switch"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/text_switcher_run_as_clean_all_files" />

                <include layout="@layout/layout_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingLeft="@dimen/dp_16"
                    android:paddingTop="@dimen/dp_12"
                    android:paddingRight="@dimen/dp_16"
                    android:paddingBottom="@dimen/dp_12">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/text_parameters"
                        android:textAppearance="?attr/textAppearanceBody1" />

                    <TextView
                        android:id="@+id/parameters_none"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="@string/text_filters_none"
                        android:textAppearance="?attr/textAppearanceBody2"
                        android:textColor="@color/material_on_background_emphasis_medium" />

                    <LinearLayout
                        android:id="@+id/container_parameters"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:animateLayoutChanges="true"
                        android:orientation="vertical">

                        <include
                            layout="@layout/layout_parameter_view"
                            android:visibility="gone"
                            tools:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_add_parameter"
                            style="@style/Widget.MaterialComponents.Button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_add_parameter" />

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_clear_parameters"
                            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/dp_16"
                            android:enabled="false"
                            android:text="@string/text_clear_parameters" />

                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/layout_divider" />

                <!--View that makes a view scrollable for low-res devices, to make fab to not overlap the content-->
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_96"
                    android:background="?android:attr/colorBackground" />

            </LinearLayout>

        </FrameLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
